Update Dashboard DAY3

--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
   },
   "dependencies": {
     "framer-motion": "^12.5.0",
-    "next": "15.2.3",
+    "next": "15.2.4",
+    "qrcode": "^1.5.4",
     "react": "^19.0.0",
+    "axios": "^1.8.4",
+    "html2canvas": "^1.4.1",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/qrcode": "^1.5.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
