--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "framer-motion": "^12.5.0",
+    "html2canvas": "^1.4.1",
     "next": "15.2.4",
     "qrcode": "^1.5.4",
     "react": "^19.0.0",
-    "axios": "^1.8.4",
-    "html2canvas": "^1.4.1",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-tooltip": "^5.28.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
